--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
         <welcome-file>faces/login.xhtml</welcome-file>
     </welcome-file-list>
     
+     <context-param>
+	<param-name>primefaces.THEME</param-name>
+	<param-value>pepper-grinder</param-value>
+    </context-param>
+    
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>securityRealm1</realm-name>
