--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
             <version>2.30.1</version>
         </dependency>
         
+        <dependency>
+            <groupId>javax.jws</groupId>
+            <artifactId>javax.jws-api</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
